refactor: streamline endpoint request handling and validation, enhance workflow management, and improve test coverage